Feature/data types (#2)