@@ -4,9 +4,7 @@ import jakarta.xml.bind.JAXBContext;
 import jakarta.xml.bind.JAXBException;
 import jakarta.xml.bind.Unmarshaller;
 import org.example.application.out.ServerService;
-import org.example.domain.DistanceUnit;
 import org.example.domain.Server;
-import org.example.framework.out.config.MissingResultException;
 import org.example.framework.out.config.ParsingException;
 import org.example.framework.out.http.HttpGetClient;
 import org.example.framework.out.http.ServerRequestException;
@@ -15,6 +13,7 @@ import org.example.util.Objectz;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -26,25 +25,26 @@ public class ServerServiceImpl implements ServerService {
         this.httpGetClient = httpGetClient;
     }
 
-    private static final Set<String> SERVER_URLS = new HashSet<>(Arrays.asList(
-            "https://www.speedtest.net/speedtest-servers-static.php", "http://c.speedtest.net/speedtest-servers-static.php",
-            "https://www.speedtest.net/speedtest-servers.php", "http://c.speedtest.net/speedtest-servers.php"));
+    private static final Set<URI> SERVER_URLS = Set.of(
+            URI.create("https://www.speedtest.net/speedtest-servers-static.php"),
+            URI.create("http://c.speedtest.net/speedtest-servers-static.php"),
+            URI.create("https://www.speedtest.net/speedtest-servers.php"),
+            URI.create("http://c.speedtest.net/speedtest-servers.php"));
 
     @Override
     public List<Server> servers(int threadsPerUrl) {
-        if (threadsPerUrl <= 0) {
-            throw new IllegalArgumentException();
-        }
+        Objectz.require(threadsPerUrl > 0);
         return SERVER_URLS.stream()
-                .map(url -> {
+                .map(base -> {
                     try {
-                        final byte[] bytes = httpGetClient.get(String.format("%s?threads=%d", url, threadsPerUrl));
+                        String s = "%s?threads=%d".formatted(base, threadsPerUrl);
+                        URI uri = URI.create(s);
+                        byte[] bytes = httpGetClient.get(uri);
                         return getServersFromXml(bytes);
-                    } catch (ParsingException | MissingResultException | ServerRequestException e) {
-                        return null;
+                    } catch (ParsingException | ServerRequestException e) {
+                        return Collections.<Server>emptyList();
                     }
                 })
-                .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .collect(Collectors.toList());
     }
@@ -56,52 +56,13 @@ public class ServerServiceImpl implements ServerService {
             Unmarshaller jaxbUnmarshaller = jaxbContext.createUnmarshaller();
             ServerSetting serverSetting = (ServerSetting) jaxbUnmarshaller.unmarshal(is);
             return serverSetting.getServers().getServerList().stream()
-                    .map(s -> new Server(
-                            s.getUrl(),
-                            s.getLat(),
-                            s.getLon(),
-                            s.getCity(),
-                            s.getCountry(),
-                            s.getIsoAlpha2CountryCode(),
-                            s.getSponsor(),
-                            s.getId(),
-                            s.getHost()))
+                    .map(org.example.framework.out.server.Server::toDomain)
+                    .filter(Optional::isPresent)
+                    .map(Optional::get)
                     .toList();
         } catch (IOException | JAXBException e) {
             throw new ParsingException(e);
         }
-    }
-
-    @Override
-    public Map<Double, Server> findClosestServers(double lat, double lon, int limit, DistanceUnit distanceUnit, List<Server> serverList) {
-        Objects.requireNonNull(distanceUnit);
-        Objects.requireNonNull(serverList);
-        Objectz.require(limit > 0);
-        Map<Double, Server> closestServers = serverList.stream()
-                .collect(Collectors.toMap(
-                        server -> calculateDistance(lat, lon, server.lat(), server.lon(), distanceUnit),
-                        server -> server, (server1, server2) -> server1, TreeMap::new));
-        return closestServers.entrySet().stream()
-                .limit(limit)
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-    }
-
-    private double calculateDistance(double lat1, double lon1, double lat2, double lon2, DistanceUnit distanceUnit) {
-        Objects.requireNonNull(distanceUnit);
-        if (lat1 == lat2 && lon1 == lon2) {
-            return 0d;
-        }
-        double theta = lon1 - lon2;
-        double dist = Math.sin(Math.toRadians(lat1)) * Math.sin(Math.toRadians(lat2))
-                + Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2)) * Math.cos(Math.toRadians(theta));
-        dist = Math.acos(dist);
-        dist = Math.toDegrees(dist);
-        dist = dist * 60 * 1.1515; // miles
-        return switch (distanceUnit) {
-            case MILE -> dist;
-            case KILOMETER -> dist * 1.609344;
-            case NAUTICAL_MILE -> dist * 0.8684;
-        };
     }
 
 }
